k8s/ArgoCD/argocd-ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-argocd
  namespace: ci-cd
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.sanches.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 8080
