k8s/ArgoCD/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: ci-cd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    argocd.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: argocd.sanches.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 8080
            #port:
            #  number: 443
            #port:
            #  number: 80    
  ingressClassName: nginx
