k8s/ArgoCD/ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-argocd
  namespace: ci-cd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure  
spec:
  #ingressClassName: nginx
  ingressClassName: traefik
  rules:
  - host: argocd.sanches.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 8080
